# ep133-ppak

./: .gitignore  ACKNOWLEDGMENTS.md  CHANGELOG.md  LICENSE  PROTOCOL.md  README.md  pyproject.toml
docs/: LOADING_SAMPLES.md  MANIFEST.md  PORT_PLAN.md  validation-guide.md  verifying-byte-offsets.md
docs/diagrams/: 00_overview.md  01_pad_numbering.md  02_pad_record_bytemap.md  03_ppak_anatomy.md  04_song_pipeline.md  05_scenes_anatomy.md  06_pattern_anatomy.md  07_locator_to_scene.md  08_manifest_anatomy.md  09_project_layout.md  10_song_layout.md  STYLE.md
ep133/: __init__.py  client.py  manifest.py  pad_record.py  project_reader.py
ep133/ppak/: __init__.py  song_writer.py  writer.py
ep133/song/: format.py  resolver.py  synthesizer.py  wav.py
tests/: conftest.py  test_assign_pad.py  test_capture_reference.py  test_load_from_manifest_placement.py  test_manifest.py  test_packing.py  test_pad_record.py  test_payloads.py  test_sample_params.py  test_song_format.py  test_song_integration.py  test_song_resolver.py  test_song_synthesizer.py  test_song_writer.py  test_wav_format.py
tools/: bpm_matrix.py  ep133_capture_reference.py  export_song.py  load_from_manifest.py  load_one.py  ppak_writer.py
