[project]
name = "ep133-ppak"
version = "0.2.0"
description = "Reverse-engineered SysEx + .ppak protocol library for the Teenage Engineering EP-133 K.O. II"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Zak Brown", email = "zak@raindog.ai" }]
requires-python = ">=3.11"
keywords = ["ep-133", "ko-ii", "teenage-engineering", "sysex", "midi", "sampler"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: System :: Hardware",
]
dependencies = [
    "numpy>=1.24",
    "soundfile>=0.12",
    "pydantic>=2.6",
    "librosa>=0.11.0",
]

[project.optional-dependencies]
midi = [
    "mido>=1.3",
    "python-rtmidi>=1.5",
]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
]

[project.scripts]
ppak-writer = "tools.ppak_writer:main"
ppak-bpm-matrix = "tools.bpm_matrix:main"
ppak-load-manifest = "tools.load_from_manifest:main"
ppak-load-one = "tools.load_one:main"
ppak-export-song = "tools.export_song:main"

[project.urls]
Homepage = "https://github.com/zacharysbrown/ep133-ppak"
Issues = "https://github.com/zacharysbrown/ep133-ppak/issues"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["ep133*", "tools*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
